# ferrocarril

./: .gitignore  Cargo.toml  Cargo.toml.bak  HANDOFF.md  NEURAL_NETWORK_VALIDATION_PLAN.md  PHASE6_STATUS.md  PLAN.md  PROJECT_STATUS_SUMMARY.md  README.md  WEIGHT_MANAGEMENT.md  analyze_audio.py  analyze_kokoro_vocab.py  analyze_speech_output.py  analyze_vocab_mapping.py  architectural_split_summary.py  audit_weight_conversion.py  bench_wasm.js  bench_wasm_multi.js  build.sh  check_direct_ipa_match.py  check_kokoro_lstm_weights.py  check_lstm_stacked_weights.py  check_lstm_weights.py  check_missing_components.py  compare_architectures.py  complete_analysis.py  comprehensive_layer_validation_plan.md  conversion_test.py  critical_decoder_audit.py  critical_weight_audit_complete.py  debug_pytorch_layers.py  debug_pytorch_official.py  debug_tokenization.py  deep_bidirectional_audit.py  download_and_convert_weights.sh  generate_binary_dictionary.py  improved_speech_detection.py  inspect_pytorch_arch.py  ipa_to_arpabet.py  layer_by_layer_validation_complete.py  (+32 more)
.github/workflows/: pages.yml  release-weights.yml
examples/: tts_synthesis.rs
ferrocarril/: .gitignore  CUSTOM_BERT_HANDOVER.md  CUSTOM_BERT_IMPLEMENTATION.md  Cargo.toml  DESIGN.md  FERROCARRIL_TENSOR_SHAPES.md  FERROCARRIL_TTS_BURNDOWN.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  NEXT_STEPS.md  README.md  SIMPLE_ARCHITECTURE.md  STATUS.md  comprehensive_textencoder_test.py  debug_tensor_flow.py  decoder_layer4_completion.py  investigate_missing_decoder_weights.py  layer_by_layer_real_integration.py  prosody_layer3_validation.py  step_by_step_integration.rs  systematic_pytorch_comparison.py  test_customalbert_functional.py  test_g2p_integration.rs  test_layer_integration.py  test_real_kokoro_weights.rs  validate_actual_weight_application.py
ferrocarril-core/: Cargo.toml  download_kokoro_model.sh  test_direct_weight_loading.rs  test_real_weight_loading.rs
ferrocarril-core/src/: config.json  g2p.rs  lib.rs  tensor.rs  weights.rs  weights_binary.rs  weights_binary_trait.rs
ferrocarril-core/src/ops/: matmul.rs  mod.rs
ferrocarril-core/tests/: binary_weight_loader_test.rs  complete_weight_validation_test.rs  weight_loading_kokoro_test.rs  weight_loading_test.rs
ferrocarril-dsp/src/: lib.rs  stft.rs  window.rs
ferrocarril-nn/src/: activation.rs  adain.rs  adain_variants.rs  conv.rs  conv1d_variants.rs  conv_transpose.rs  lib.rs  linear.rs  linear_variants.rs  lstm.rs  lstm_variants.rs  text_encoder.rs  weight_norm.rs
ferrocarril-tts/: Cargo.toml
ferrocarril-tts/src/: lib.rs  main.rs
ferrocarril-tts/src/model/: kokoro_inference.rs  mod.rs
ferrocarril-wasm/: Cargo.toml  README.md
ferrocarril-wasm/demo/: build.sh  index.html  main.js  serve.py
ferrocarril-wasm/src/: lib.rs
ferrocarril/.cargo/: config.toml
ferrocarril/ferrocarril-core/: Cargo.toml
ferrocarril/ferrocarril-core/src/: lib.rs  weights.rs  weights_binary.rs
ferrocarril/ferrocarril-core/src/ops/: matmul.rs
ferrocarril/ferrocarril-dsp/: Cargo.toml
ferrocarril/ferrocarril-nn/: Cargo.toml
ferrocarril/ferrocarril-nn/src/: adain.rs  adain_variants.rs  conv.rs  conv1d_variants.rs  conv_transpose.rs  linear.rs  linear_variants.rs  lstm.rs  lstm_variants.rs  text_encoder.rs  text_encoder_strict.rs
ferrocarril/ferrocarril-nn/src/bert/: attention.rs  custom_albert.rs  embeddings.rs  feed_forward.rs  layer_norm.rs  mod.rs  transformer.rs
ferrocarril/ferrocarril-nn/src/prosody/: duration_encoder.rs  mod.rs  resblk1d.rs
ferrocarril/ferrocarril-nn/src/vocoder/: adain_resblk1.rs  adain_resblk1d.rs  mod.rs  sinegen.rs  source_module.rs
ferrocarril/ferrocarril-wasm/: .gitignore  README.md
ferrocarril/src/: lib.rs  main.rs
ferrocarril/tests/: adain_resblk1_test.rs  adain_resblk_upsampling_test.rs  adain_test.rs  alignment_test.rs  basic_test.rs  bert_encoder_golden_test.rs  bert_weight_test.rs  custom_bert_test.rs  debug_test.rs  decoder_golden_test.rs  decoder_real_weights_test.rs  duration_encoder_golden_test.rs  end_to_end_real_voice_test.rs  end_to_end_test.rs  fixed_inference_test.rs  full_inference_test.rs  g2p_integration_test.rs  proper_g2p_textencoder_validation.rs  prosody_predictor_real_weights_test.rs  prosody_predictor_test.rs  simple_test.rs  simple_textencoder_test.rs  systematic_weight_validation.rs  text_encoder_golden_test.rs  textencoder_corrected_validation.rs  textencoder_validation.rs
ferrocarril_weights/voices/: af_aoede.json  am_echo.json  bf_emma.json  bm_fable.json  bm_lewis.json  hf_alpha.json  hm_psi.json  jf_tebukuro.json  jm_kumo.json  pm_santa.json  voices.json  zf_xiaobei.json  zf_xiaoyi.json
kokoro/: pytorch_duration_analysis.py
kokoro_weights/model/: metadata.json
kokoro_weights/voices/: af_heart.json  af_jessica.json  af_kore.json  af_sarah.json  am_liam.json  am_onyx.json  am_puck.json  bf_alice.json  bf_isabella.json  bm_daniel.json  ff_siwis.json  hm_omega.json  if_sara.json  im_nicola.json  (+5 more)
phonesis/: CONTRIBUTING.md  Cargo.toml  DESIGN.md  DICTIONARY.md  DICTIONARY_SETUP.md  README.md  STATUS.md  embedded_dictionary_data.rs  normalizer-README.md  test_comprehensive_ipa.py
phonesis/examples/: basic_lookup.rs  g2p_conversion.rs  test_comprehensive_words.rs  test_hello_world.rs  text_normalization.rs
phonesis/src/: error.rs  ferrocarril_adapter.rs  lib.rs  phoneme.rs
phonesis/src/dictionary/: compact.rs  loader.rs  mod.rs  trie.rs
phonesis/src/english/: dictionary.rs  mod.rs  rules.rs
phonesis/src/normalizer/: mod.rs  numbers.rs  symbols.rs  tokenizer.rs
phonesis/src/rules/: context.rs  engine.rs  mod.rs  patterns.rs
phonesis/tests/: binary_dictionary_test.rs  complex_word_test.rs  end_to_end_test.rs  g2p_integration_test.rs  ipa_conversion_test.rs  normalizer_test.rs  robustness_test.rs  tts_edge_cases_test.rs
scripts/: validate_bert.py  validate_kmodel.py  validate_text_encoder.py
src/: lib.rs  main.rs
tests/: bert_golden_test.rs  custom_bert_test.rs  prosody_predictor_golden_test.rs
tools/: download_and_convert_weights.sh  weight_converter.py
(+95 files in other folders)
