[workspace]
members = [
    "ferrocarril-core",
    "ferrocarril-dsp", 
    "ferrocarril-nn",
    "ferrocarril-tts",
    "phonesis"
]

resolver = "2"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Test dependencies  
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1