[package]
name = "ferrocarril-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde-pickle    = "1.2"  # Keep for compatibility with PyTorch pickle format
serde_json      = "1.0"  # For JSON metadata parsing
zip             = "0.6"  # For handling PyTorch zip-based formats
memmap2         = "0.7"  # For memory mapping binary files
thiserror       = "1.0"  # For better error handling (new)

[features]
default = ["weights"]
weights = []