[package]
name = "phonesis"
version = "0.1.0"
edition = "2021"
authors = ["Phonesis Contributors"]
description = "A pure Rust library for grapheme-to-phoneme (G2P) conversion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iGentAI/ferrocarril"
documentation = "https://docs.rs/phonesis"
readme = "README.md"
keywords = ["phonetics", "linguistics", "tts", "speech", "nlp"]
categories = ["text-processing", "parsing"]

[features]
default = ["english"]
english = []

[dependencies]
lazy_static = "1.4"