[package]
name = "ferrocarril-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core serialization dependencies for binary weight loading
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Direct dependency on Phonesis G2P
phonesis = { path = "../../phonesis" }

[features]
default = ["weights"]
weights = []